Fixed dockerfile and docker-compose with env file copy

--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ WRITE_TIMEOUT=5
 IDLE_TIMEOUOT=10
 
 #DB CREDS
-DB_ADDRESS="localhost:6379"
+DB_ADDRESS="redis:6379"
 DB_PASSWORD=""
 DB_NAME="0"
 
